--- a/estructura de archivos/src/views/partials/footer.ejs
+++ b/estructura de archivos/src/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-<footer>
+<footer class="footer__content">
     <div class="footer--logo">
         <a href="/index"><img src="/images/logo2.png" alt="Logo"></a>
     </div>
