--- a/estructura de archivos/src/views/productsLoad.ejs
+++ b/estructura de archivos/src/views/productsLoad.ejs
@@ -5,45 +5,42 @@
     <%- include('./partials/header',{ title:'home', }) %>
     <main id="products__main">
         <div class="products-caja">
-            <div class="">
-                <h3 class="products-titulo">Cargar nuevo producto</h3>
-            </div>
             
             <form action="">
                 <div class="form-box">
-                    <label class="form__label" for="nombre">Nombre</label>
-                    <input class="form__input" type="text" id="nombre" autocomplete="off" name="firstName" placeholder="Ingrese el nombre del articulo">
+                    <label class="form__label" for="nombre">Título:</label>
+                    <input class="form__input" type="text" id="nombre" autocomplete="off" name="firstName" placeholder="Título del producto">
                     <!-- <small class="form__text--error">El nombre es obligatorio</small> -->
                 </div>
                 <div class="form-box">
-                    <label class="form__label" >Seleccione una categoria</label>
+                    <label class="form__label">Categorías:</label>
                     <select name="categoria" id="">
-                        <option value="accion">Categoria</option>
-                        <option value="accion">accion</option>
-                        <option value="aventura">aventura</option>
+                        <option value="accion" hidden selected>Seleccionar categoría...</option>
+                        <option value="accion">Acción</option>
+                        <option value="aventura">Aventura</option>
                         <option value="ftp/tps">FTP/TPS</option>
                         <option value="rpg">RPG</option>
-                        <option value="simulacion">simulacion</option>
-                        <option value="carreras">carreras</option>
-                        <option value="lucha">lucha</option>
+                        <option value="simulacion">Simulación</option>
+                        <option value="carreras">Carreras</option>
+                        <option value="lucha">Lucha</option>
                         <option value="mmo">MMO</option>
-                        <option value="arcade">arcade</option>
-                        <option value="otro">otro</option>
+                        <option value="arcade">Arcade</option>
+                        <option value="otro">Otro</option>
                     </select>
 
                 </div>
                 
                 <div class="form-box">
-                    <label class="form__label" for="precio">Precio</label>
-                    <input class="form__input" type="number" id="" name="precio" placeholder="Ingrese un precio">
+                    <label class="form__label" for="precio">Precio:</label>
+                    <input class="form__input" type="number" id="" name="precio" placeholder="Precio del producto">
                     <!-- <small class="form__text--error">Solo se aceptan numeros en este campo</small> -->
 
                 </div>
                 
                 <div class="form-box">
-                    <label class="form__label" >Descuento</label>
+                    <label class="form__label">Descuento:</label>
                     <select name="descuento" id="">
-                        <option value="">Descuento</option>
+                        <option value="" hidden selected>Seleccionar descuento...</option>
                         <option value="5">5%</option>
                         <option value="10">10%</option>
                         <option value="15">15%</option>
@@ -53,20 +50,20 @@
 
                 </div>
                 <div class="form-box">
-                    <label class="form__label" for="descripcion">Descripcion</label>
-                    <textarea name="descripcion" id="" cols="30" rows="5" placeholder="Ingrese una descripcion"></textarea>
+                    <label class="form__label" for="descripcion">Descripción:</label>
+                    <textarea name="descripcion" id="" cols="30" rows="5" minlength="20" maxlength="250" placeholder="Breve descripción del producto..."></textarea>
 
                 </div>
                 <div class="form-box">
                     
                 </div>
                 <div class="form-box load-image">
-                    <label class="form__label" for="imagen">Añadir imagenes</label>
+                    <label class="form__label" for="imagen">Añadir Imágenes:</label>
                     <input type="file" name="imagen" accept=".jpg" multiple>
                 </div>
                 <div class="form-box buttons">
-                    <button class="" type="reset">Cancelar</button>
-                    <button  class="total-comprar " type="submit">Agregar</button>
+                    <button class="total-comprar" type="reset">Cancelar</button>
+                    <button  class="total-comprar" type="submit">Agregar</button>
                 </div>
             </form>
         </div>
