--- a/estructura de archivos/old/views/index.html
+++ b/estructura de archivos/old/views/index.html
@@ -23,7 +23,7 @@
                     <a class="header--figure-logo" href="/index"><img src="/images/logo2.png" alt=""></a>
                     <div class="header__top--general-navigation_button">
                         <div class="header__top--search">
-                            <input type="text" placeholder="Buscar" requiered>
+                            <input type="text" placeholder="Buscar" required>
                             <div class="header__top--search-button"><i class="fa-solid fa-magnifying-glass icon"></i></div>
                         </div>
                         <button><a href="/cart"><i class="fa-solid fa-cart-shopping"></i></a></button>
