--- a/estructura de archivos/src/views/index.ejs
+++ b/estructura de archivos/src/views/index.ejs
@@ -16,13 +16,16 @@
 <body id="index">
     <header id="top">
         <div class="header__top--general">
-            <nav class="navbar navbar-dark bg-dark fixed-top">
+            <nav class="navbar navbar-dark bg-dark fixed-top header__top--general-navbar">
                 <div class="container-fluid">
                     <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
                     <span class="navbar-toggler-icon"></span></button>
                     <a class="header--figure-logo" href="/index"><img src="/images/logo2.png" alt=""></a>
                     <div class="header__top--general-navigation_button">
-                        <button><a href="#"><i class="fa-solid fa-magnifying-glass"></i></a></button>
+                        <div class="header__top--search">
+                            <input type="text" placeholder="Buscar" required>
+                            <div class="header__top--search-button"><i class="fa-solid fa-magnifying-glass icon"></i></div>
+                        </div>
                         <button><a href="/cart"><i class="fa-solid fa-cart-shopping"></i></a></button>
                         <li class="nav-item dropdown header__top--login">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fa-solid fa-user"></i></a>
@@ -38,7 +41,11 @@
                             <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                         </div>
                         <div class="offcanvas-body">
-                            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3" style="padding-top: 25px;">
+                                <div class="header__navbar-nav-searchbar">
+                                    <input type="text" placeholder="Buscar" required>
+                                    <div class="header__navbar-nav-search-button"><i class="fa-solid fa-magnifying-glass icon"></i></div>
+                                </div>
                                 <li class="nav-item">
                                     <a class="nav-link active" aria-current="page" href="#">TIENDA</a>
                                 </li>
@@ -64,10 +71,47 @@
                         </div>
                     </div>
                 </div>
+                <div class="header_div">
+                    <ul class="navbar-nav justify-content-end flex-grow-1 pe-3 header_div--navbar-desktop">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Tienda</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Juegos</a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">Action</a></li>
+                                <li><a class="dropdown-item" href="#">Another action</a></li>
+                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Tarjeta de regalo</a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">Action</a></li>
+                                <li><a class="dropdown-item" href="#">Another action</a></li>
+                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Xbox</a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">Action</a></li>
+                                <li><a class="dropdown-item" href="#">Another action</a></li>
+                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Software</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Espñaol Latinoamerica | ARS</a>
+                        </li>
+                    </ul>
+                </div>
             </nav>
         </div>
     </header>
-    <main id="mid" class="main__content">
+    <main class="main__content">
         <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -97,7 +141,7 @@
         <h2>Oferta del Día</h2>
         <section class="main__section--product ">
             <article class="main__section--product-article ">
-                <img src="/images/gift-card-playstation.jpeg " alt="xbox-key ">
+                <img class="main__section--product-img-key" src="/images/gift-card-playstation.jpeg " alt="xbox-key ">
                 <div class="main__section--product-favorite "><i class="fa-regular fa-heart "></i></div>
                 <div class="main__section--product-content_offers ">
                     <div class="main-section-global-region ">
@@ -112,7 +156,7 @@
                 </div>
             </article>
             <article class="main__section--product-article">
-                <img src="/images/RE2-card.jpeg" alt="xbox-key ">
+                <img class="main__section--product-img-key" src="/images/RE2-card.jpeg" alt="xbox-key ">
                 <div class="main__section--product-favorite "><i class="fa-regular fa-heart "></i></div>
                 <div class="main__section--product-content_offers ">
                     <div class="main-section-global-region ">
@@ -127,7 +171,7 @@
                 </div>
             </article>
             <article class="main__section--product-article">
-                <img src="/images/gtav-card.jpeg" alt="xbox-key ">
+                <img class="main__section--product-img-key" src="/images/gtav-card.jpeg" alt="xbox-key ">
                 <div class="main__section--product-favorite "><i class="fa-regular fa-heart "></i></div>
                 <div class="main__section--product-content_offers ">
                     <div class="main-section-global-region ">
@@ -142,7 +186,7 @@
                 </div>
             </article>
             <article class="main__section--product-article ">
-                <img src="/images/steam-card.jpeg" alt="xbox-key ">
+                <img class="main__section--product-img-key" src="/images/steam-card.jpeg" alt="xbox-key ">
                 <div class="main__section--product-favorite "><i class="fa-regular fa-heart "></i></div>
                 <div class="main__section--product-content_offers ">
                     <div class="main-section-global-region ">
@@ -199,19 +243,7 @@
         <h2>Juegos Recomendados (Digitales)</h2>
         <section class="main__section--product ">
             <article class="main__section--product-article ">
-                <div class="main__section--product-favorite "><i class="fa-regular fa-heart "></i></div>
-                <img src="/images/eldenring-card.webp " alt="xbox-key ">
-                <div class="main__section--product-content ">
-                    <div class="main-section-global-region ">
-                        <p class="main__section--product-region ">Argentina</p>
-                        <p class="main__section--product-ubication ">Desde</p>
-                    </div>
-                    <p class="main__section--product-price ">$ 9999</p>
-                    <p class="main__section--product-description ">Eldern Rin Código de XBOX LIVE Argentina</p>
-                </div>
-            </article>
-            <article class="main__section--product-article ">
-                <img src="/images/minecraftjava-bedrockedition-card.webp" alt="xbox-key ">
+                <img class="main__section--product-img-key" src="/images/eldenring-card.webp" alt="xbox-key ">
                 <div class="main__section--product-favorite "><i class="fa-regular fa-heart "></i></div>
                 <div class="main__section--product-content ">
                     <div class="main-section-global-region ">
@@ -223,7 +255,19 @@
                 </div>
             </article>
             <article class="main__section--product-article ">
-                <img src="/images/megaman11-card.jpeg " alt="xbox-key ">
+                <img class="main__section--product-img-key" src="/images/minecraftjava-bedrockedition-card.webp" alt="xbox-key ">
+                <div class="main__section--product-favorite "><i class="fa-regular fa-heart "></i></div>
+                <div class="main__section--product-content ">
+                    <div class="main-section-global-region ">
+                        <p class="main__section--product-region ">Argentina</p>
+                        <p class="main__section--product-ubication ">Desde</p>
+                    </div>
+                    <p class="main__section--product-price ">$ 9999</p>
+                    <p class="main__section--product-description ">Minecraft: Java & Bedrock Edition Official website Key Argentina</p>
+                </div>
+            </article>
+            <article class="main__section--product-article ">
+                <img class="main__section--product-img-key" src="/images/megaman11-card.jpeg " alt="xbox-key ">
                 <div class="main__section--product-favorite "><i class="fa-regular fa-heart "></i></div>
                 <div class="main__section--product-content ">
                     <div class="main-section-global-region ">
@@ -235,7 +279,7 @@
                 </div>
             </article>
             <article class="main__section--product-article ">
-                <img src="/images/re4-card.jpeg " alt="xbox-key ">
+                <img class="main__section--product-img-key" src="/images/re4-card.jpeg " alt="xbox-key ">
                 <div class="main__section--product-favorite "><i class="fa-regular fa-heart "></i></div>
                 <div class="main__section--product-content ">
                     <div class="main-section-global-region ">
@@ -333,9 +377,59 @@
             </button>
         </div>
     </main>
-    
-    <%- include('./partials/footer',{ title:'home', }) %>
-
+    <footer class="footer__content">
+        <div class="footer--logo">
+            <a href="/index"><img src="/images/logo2.png" alt="Logo"></a>
+        </div>
+        <div class="footer_nav">
+            <nav class="footer_nav-home">
+                <p>Titulos</p>
+                <ul type="none">
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Mi cuenta</a></li>
+                    <li><a href="">Contactanos</a></li>
+                    <li><a href="">Ayuda</a></li>
+                </ul>
+            </nav>
+            <nav class="footer_nav-aboutUs">
+                <p>
+                    Titulos
+                </p>
+                <ul type="none">
+                    <li><a href=""> Sobre nosotros</a></li>
+                    <li><a href="">Politica de privacidad</a></li>
+                    <li><a href="">Politica de cookies</a></li>
+                    <li><a href="">Aviso legal</a></li>
+                </ul>
+            </nav>
+            <nav class="footer_nav-aboutUs">
+                <p>
+                    Titulos
+                </p>
+                <ul type="none">
+                    <li><a href="">Titulos</a></li>
+                    <li><a href="">Titulos</a></li>
+                    <li><a href="">Titulos</a></li>
+                    <li><a href="">Titulos</a></li>
+                </ul>
+            </nav>
+            <div class="footer_nav-app">
+                <p>Descarga nuestra app</p>
+                <a href=""><img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse3.mm.bing.net%2Fth%3Fid%3DOIP.a7hkwxpVOiMzChf87GmGdwHaCM%26pid%3DApi&f=1" alt=""></a>
+                <a href=""><img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse4.mm.bing.net%2Fth%3Fid%3DOIP.dnPVcNejErfwIJacdXV27wHaCj%26pid%3DApi&f=1" alt=""></a>
+            </div>
+        </div>
+        <section class="footer__lastsection">
+            <nav class="footer__lastsection__navbar">
+                <a href=""><i class="fa-brands fa-facebook-f"></i></a>
+                <a href=""><i class="fa-brands fa-twitter"></i></a>
+                <a href=""><i class="fa-brands fa-google-plus-g"></i></a>
+                <a href=""><i class="fa-brands fa-instagram"></i></a>
+                <a href=""><i class="fa-brands fa-discord"></i></a>
+            </nav>
+            <p class="footer__lastsection__copyright">Copyright © 2022 DALF-STORE</p>
+        </section>
+    </footer>
     <script src="https://kit.fontawesome.com/ae7c764a16.js " crossorigin="anonymous "></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js " integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk " crossorigin="anonymous "></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js " integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK " crossorigin="anonymous "></script>
