--- a/estructura de archivos/src/views/productEdit.ejs
+++ b/estructura de archivos/src/views/productEdit.ejs
@@ -7,7 +7,7 @@
             <main id="products__main">
                 <div class="products-caja">
                     <div class="">
-                        <h3 class="products-titulo">Cargar nuevo producto</h3>
+                        <h3 class="products-titulo">Editar producto</h3>
                     </div>
                     <form action="">
                         <div class="form-box">
@@ -66,7 +66,7 @@
                         </div>
                         <div class="form-box buttons">
                             <button class="total-comprar" type="reset">Cancelar</button>
-                            <button class="total-comprar" type="submit">Agregar</button>
+                            <button class="total-comprar" type="submit">Confirmar Edición</button>
                         </div>
                     </form>
                 </div>
