--- a/estructura de archivos/src/views/products/productDetail.ejs
+++ b/estructura de archivos/src/views/products/productDetail.ejs
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<%- include('./partials/head',{ title:'home', }) %>
+<%- include('../partials/head',{ title:'home', }) %>
 
     <body>
 
-        <%- include('./partials/header',{ title:'home', }) %>
+        <%- include('../partials/header',{ title:'home', }) %>
             <div class="">
                 <h3 class="products-titulo">Editar producto</h3>
             </div>
@@ -136,7 +136,7 @@
                 </section>
             </main>
 
-            <%- include('./partials/footer',{ title:'home', }) %>
+            <%- include('../partials/footer',{ title:'home', }) %>
 
     </body>
 
