--- a/estructura de archivos/src/views/users/login.ejs
+++ b/estructura de archivos/src/views/users/login.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    <%- include('./partials/head',{ title:'home', }) %>
+    <%- include('../partials/head',{ title:'home', }) %>
 
 <body id="login">
     <div class="body__container">
