--- a/estructura de archivos/src/views/users/shopping.ejs
+++ b/estructura de archivos/src/views/users/shopping.ejs
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-    <%- include('./partials/head',{ title:'home', }) %>
+    <%- include('../partials/head',{ title:'home', }) %>
 <body class="carrito">
-    <%- include('./partials/header',{ title:'home', }) %>
+    <%- include('../partials/header',{ title:'home', }) %>
     <main class="carrito__main">
         <section class="main__section--product ">
             <article class="main__section--product-article ">
@@ -63,7 +63,7 @@
             </article>
         </section>
     </main>
-    <%- include('./partials/footer',{ title:'home', }) %>
+    <%- include('../partials/footer',{ title:'home', }) %>
     <script src="/javascripts/glider.js"></script>
     <script>
         window.addEventListener('load', function() {
