--- a/estructura de archivos/src/views/products/cartPay.ejs
+++ b/estructura de archivos/src/views/products/cartPay.ejs
@@ -1,71 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<%- include('./partials/head',{ title:'home', }) %>
+<%- include('../partials/head',{ title:'home', }) %>
 
     <body class="carrito">
-        <%- include('./partials/header',{ title:'home', }) %>
+        <%- include('../partials/header',{ title:'home', }) %>
             <main class="carrito__main">
                 <section class="carrito__main__section--productos">
-
                     <div class="products-caja2">
-                        <p class="carrito__main__section--pruductos-title">Datos de envio</p>
+
+                        <p class="carrito__main__section--pruductos-title">Metodos de pago</p>
                         <div class="linea">
                             <hr>
                         </div>
-                        <form action="/cartAdress" method="POST">
-                            <div class="form-box" id="medio">
+                        <form action="/cartPay" method="POST">
+                            <div class="form-box">
                                 <label class="form__label" for="">Nombre</label>
-                                <input class="form__input" type="text" name="nombre" placeholder="Nombre">
+                                <input type="text" name="nameSurname" id="entero" placeholder="Nombre y apellido">
                             </div>
-                            <div class="form-box" id="medio">
-                                <label class="form__label" for="">Apellido</label>
-                                <input class="form__input" type="text" name="apellido" placeholder="Apellido">
+                            <div class="form-box">
+                                <label class="form__label" for="">Nro de tarjeta</label>
+                                <input type="number" name="numberCard" id="entero" placeholder="Numero de tarjeta">
                             </div>
-                            <div class="form-box" id="entero">
-                                <label class="form__label" for="">Email</label>
-                                <input class="form__input" type="email" name="email" placeholder="Email">
+                            <p id="expira">Expira</p>
+                            <div class="form-box">
+                                <label class="form__label" for="">Vencimiento</label>
+                                <input type="date" name="fecha" id="entero" value="DD/MM/AAAA">
                             </div>
-                            <div class="form-box" id="medio">
-                                <label class="form__label" for="">Telefono</label>
-                                <input class="form__input" type="tel" name="telefono" placeholder="Telefono">
+                            <div class="form-box">
+                                <label class="form__label" for="">CVC</label>
+                                <input type="password" name="clave" id="entero" placeholder="CVC">
                             </div>
-                            <div class="form-box" id="medio">
-                                <label class="form__label" for="">Codigo de area</label>
-                                <input class="form__input" type="tel" name="codigoarea" placeholder="Codigo de area">
-                            </div>
-                            <div class="form-box" id="medio">
-                                <label class="form__label" for="">Ciudad</label>
-                                <input class="form__input" type="text" name="ciudad" placeholder="Ciudad">
-                            </div>
-                            <div class="form-box" id="medio">
-                                <label class="form__label" for="">Provincia</label>
-                                <input class="form__input" type="text" name="provincia" placeholder="Provincia">
-                            </div>
-                            <div class="form-box" id="entero">
-                                <label class="form__label" for="">Barrio</label>
-                                <input class="form__input" type="text" name="barrio" placeholder="Barrio">
-                            </div>
-                            <div class="form-box" id="entero">
-                                <label class="form__label" for="">Calle</label>
-                                <input class="form__input" type="text" name="calle" placeholder="Calle">
-                            </div>
-                            <div class="form-box" id="medio">
-                                <label class="form__label" for="">Codigo postal</label>
-                                <input class="form__input" type="number" name="codigopostal" placeholder="Codigo postal">
-                            </div>
-                            <div class="form-box" id="medio">
-                                <label class="form__label" for="">Pais</label>
-                                <select name="pais">
-                                    <option value="argentina">Argentina</option>
-                                    <option value="brasil">Brasil</option>
-                                    <option value="chile">Chile</option>
-                                    <option value="paraguay">Paraguay</option>
-                                    <option value="uruguay">Uruguay</option>
-                                </select>
-                            </div>
-                        </form>
 
+                        </form>
                         <div class="total">
                             <div>
                                 <p class="total-productos">Productos</p>
@@ -81,10 +48,11 @@
                             </div>
                             <img src="/images/medios-de-pago-1723294542" alt="">
                             <div class="total-comprar">
-                                <button><a href="/cartPay">Continuar</a></button>
+                                <button><a href="/cartPay">Comprar</a></button>
                             </div>
                         </div>
                     </div>
+
                 </section>
                 <section class="carrito__main__section--pruductos-recomendados">
                     <p class="carrito__main__section--pruductos-title">Productos que pueden interesarte</p>
@@ -134,7 +102,7 @@
                     </article>
                 </section>
             </main>
-            <%- include('./partials/footer',{ title:'home', }) %>
+            <%- include('../partials/footer',{ title:'home', }) %>
                 <script src="/javascripts/glider.js"></script>
                 <script>
                     window.addEventListener('load', function () {
