correction code and productsDB.json added

--- a/estructura de archivos/src/views/index.ejs
+++ b/estructura de archivos/src/views/index.ejs
@@ -254,7 +254,7 @@
                         <p class="main__section--product-ubication ">Desde</p>
                     </div>
                     <p class="main__section--product-price ">$ 9999</p>
-                    <p class="main__section--product-description ">Minecraft: Java & Bedrock Edition Official website Key Argentina</p>
+                    <p class="main__section--product-description ">Elden Ring Código de XBOX LIVE Argentina</p>
                 </div>
             </article>
             <article class="main__section--product-article ">
