--- a/estructura de archivos/src/views/products/productsLoad.ejs
+++ b/estructura de archivos/src/views/products/productsLoad.ejs
@@ -68,10 +68,11 @@
                         <option value="" hidden selected>Seleccionar...</option>
                         <option value="5">Xbox</option>
                         <option value="">Microsoft</option>
-                        <option value="">PlayStation</option>
                         <option value="">Steam</option>
+                        <option value="8">PSN</option>
                         <option value="">Ubisoft</option>
                         <option value="">Battle.net</option>
+                        <option value="">Otro</option>
                         </div>
                         <div class="form-box load-image">
                             <label class="form__label" for="imagen">Añadir Imágenes:</label>
