--- a/estructura de archivos/src/views/products/productEdit.ejs
+++ b/estructura de archivos/src/views/products/productEdit.ejs
@@ -59,9 +59,20 @@
                         <div class="form-box">
                             <label class="form__label" for="descripcion">Descripción:</label>
                             <textarea name="descripcion" id="" cols="30" rows="5" minlength="20" maxlength="250" placeholder="Breve descripción del producto..."></textarea>
-
                         </div>
+                        
                         <div class="form-box">
+                        <label class="form__label">Compañía:</label>
+                        <select name="descuento" id="">
+                        <option value="1" hidden selected>Seleccionar...</option>
+                        <option value="2">Xbox</option>
+                        <option value="3">Microsoft</option>
+                        <option value="5">Steam</option>
+                        <option value="8">PSN</option>
+                        <option value="6">Ubisoft</option>
+                        <option value="7">Battle.net</option>
+                        <option value="">Otro</option>
+                        </div>
 
                         </div>
                         <div class="form-box load-image">
