--- a/estructura de archivos/src/views/users/register.ejs
+++ b/estructura de archivos/src/views/users/register.ejs
@@ -19,7 +19,7 @@
         <main>
             <div class="main__container1">
                 <section class="main__container--data1">
-                    <form action="">
+                    <form action="" method="POST">
                         <article class="fullName1">
                             <i class="fa-solid fa-user"></i><label for="name">Nombre Completo:</label>
                             <input type="text" placeholder="Ingresá tu nombre completo" id="name" name="name" required>
