--- a/estructura de archivos/src/views/products/productsLoad.ejs
+++ b/estructura de archivos/src/views/products/productsLoad.ejs
@@ -15,10 +15,10 @@
                     <div class="">
                         <h3 class="products-titulo">Cargar nuevo producto</h3>
                     </div>
-                    <form action="">
+                    <form action="" method="post">
                         <div class="form-box">
-                            <label class="form__label" for="nombre">Título:</label>
-                            <input class="form__input" type="text" id="nombre" autocomplete="off" name="firstName" placeholder="Título del producto">
+                            <label class="form__label" for="name">Título:</label>
+                            <input class="form__input" type="text" id="nombre" autocomplete="off" name="name" placeholder="Título del producto">
                             <!-- <small class="form__text--error">El nombre es obligatorio</small> -->
                         </div>
                         <div class="form-box">
@@ -40,15 +40,15 @@
                         </div>
 
                         <div class="form-box">
-                            <label class="form__label" for="precio">Precio:</label>
-                            <input class="form__input" type="number" id="" name="precio" placeholder="Precio del producto">
+                            <label class="form__label" for="price">Precio:</label>
+                            <input class="form__input" type="number" id="" name="price" placeholder="Precio del producto">
                             <!-- <small class="form__text--error">Solo se aceptan numeros en este campo</small> -->
 
                         </div>
 
                         <div class="form-box">
                             <label class="form__label">Descuento:</label>
-                            <select name="descuento" id="">
+                            <select name="discount" id="">
                         <option value="" hidden selected>Seleccionar descuento...</option>
                         <option value="5">5%</option>
                         <option value="10">10%</option>
@@ -60,11 +60,12 @@
                         </div>
                         <div class="form-box">
                             <label class="form__label" for="descripcion">Descripción:</label>
-                            <textarea name="descripcion" id="" cols="30" rows="5" minlength="20" maxlength="250" placeholder="Breve descripción del producto..."></textarea>
+                            <textarea name="description" id="" cols="30" rows="5" minlength="20" maxlength="250" placeholder="Breve descripción del producto..."></textarea>
                         </div>
                         <div class="form-box">
+
                         <label class="form__label">Compañía:</label>
-                        <select name="descuento" id="">
+                        <select name="company" id="">
                         <option value="" hidden selected>Seleccionar...</option>
                         <option value="5">Xbox</option>
                         <option value="">Microsoft</option>
