description dinamic added productDetail

--- a/estructura de archivos/src/views/products/productDetail.ejs
+++ b/estructura de archivos/src/views/products/productDetail.ejs
@@ -60,25 +60,7 @@
                 </section>
                 <section class="detail__product__store">
                     <h3>Descripción</h3>
-                    <p>Oculus Quest 2 128GB INCLUYE - Casco VR de realidad virtual - Funda de Silicona para Interfaz Facial - 2 Controles - 2 Pilas AA - Cargador de Pared - Separador para uso de Anteojos - Cable de Carga HARDWARE DE ÚLTIMA GENERACIÓN - Con
-                        su procesador ultrarrápido y la pantalla de mayor resolución, cada uno de tus moviementos cuentan. FÁCIL DE CONFIGURAR - Abre la caja, configúralo con la aplicación para smartphone y adéntrate en la realidad virtual. No necesita
-                        PC ni consola. Requiere acceso inalámbrico a internet y la aplicación Oculus (gratis para descargar) para realizar la configuración. EXPERIENCA DE JUEGO TODO EN UNO - Explora títulos nuevos y clásicos en la extensa biblioteca de
-                        juegos de Oculus Quest, todos compatibles con Quest 2. ENTRETENIMIENTO INMERSIVO - Consigue un asiento en primera fila en conciertos en directo, películas innovadoras, eventos exclusivos y mucho más. PANTALLA PREMIUM - No se te
-                        escapará ningún detalle gracias a su increíble pantalla con 50% más píxeles que la generación anterior de Quest. Quest 2 necesita tu cuenta de Facebook para iniciar sesión, lo que te permite encontrar a tus amigos en la realidad
-                        virtual con facilidad y descubrir comunidades alrededor del mundo. COMPATIBLE CON PC EQUIPADA PARA VIDEOJUEGOS DE REALIDAD VIRTUAL - Conecta tu gafas con un PC para videojuegos compatible mediante el cable Link y adéntrate en títulos
-                        increíbles de Oculus Rift. El cable de enlace de Oculus se vende por separado. SONIDO CINEMATOGRÁFICO 3D - Escucha en todas las direcciones con los altavoces integrados que emiten un sonido posicional cinemático en 3D. PROYECTA
-                        LA IMAGEN DE LAS GAFAS - Muestra lo que ves en las gafas directamente en la aplicación de Oculus o en un televisor compatible. * El almacenamiento disponible es menor del que se muestra debido al software existente. Es necesario
-                        tener una cuenta de Facebook. ////////////////////////////////////////////////////////// SOMOS CLD Más de 10 años en el mercado. 100% de calificaciones positivas. ////////////////////////////////////////////////////////// 30 DIAS
-                        DE PRUEBA: Recibí el producto que esperabas o te devolvemos tu dinero. Calidad asegurada en todos nuestros productos. ////////////////////////////////////////////////////////// VENTAS MAYORISTAS En CLD somos importadores directos
-                        de todos los productos que comercializamos. Consúltanos por precios mayoristas y convertirte en distribuidor de nuestros productos. ////////////////////////////////////////////////////////// RETIROS EN SUCURSAL: Nos encontramos
-                        ubicados en la zona de Once, CABA. Podés retirar tus compras por nuestro local de lunes a viernes de 8.15hs a 18hs • Colectivos: 26, 24, 124, 146, 115,95 • Subte: Línea B Pasteur, línea H once y corrientes, Línea D facultad de
-                        medicina (6 cuadras) • Tren: BELGRANO NORTE, MITRE, SAN MARTÍN, SARMIENTO IMPORTANTE: Esta opción es únicamente para las compras realizadas con la modalidad "ACUERDO CON EL VENDEDOR" o "RETIRO EN DOMICILIO DEL VENDEDOR" //////////////////////////////////////////////////////////
-                        ENVIOS A DOMICILIO A TODO EL PAIS MEDIANTE MERCADO ENVIOS CON NORMALIDAD: Podés conocer el costo de envío y demora de tu compra colocando tu código postal debajo del precio de cada publicación. //////////////////////////////////////////////////////////
-                        ENVIOS POR MOTO FLEX EN CABA Y GBA: Podés consultar el costo de envío y la demora de tu compra seleccionando la opción "MOTO FLEX" o "ENVIO EN EL DIA" ///////////////////////////////////////////////////////// ACEPTAMOS TODOS LOS
-                        MEDIOS DE PAGO ////////////////////////////////////////////////////////// FACTURACION Emitimos Factura A y B. Si necesitás factura A te pedimos que coloques los datos correspondientes en tus datos de facturación. IMPORTANTE - En
-                        caso contrario la factura se emite automáticamente como factura B (consumidor final) por nuestro sistema de facturación. ////////////////////////////////////////////////////////// LA GARANTIA DE TODOS NUESTROS PRODUCTOS ES DE 30
-                        DIAS ////////////////////////////////////////////////////////// Estamos disponibles online de 8.15hs a 18hs para responder todas tus consultas de manera rápida y eficaz. Para nosotros es un placer ayudarte. CLD. ____________________________
-                    </p>
+                    <p> <%= product.description %> </p>
                 </section>
                 <section class="detail__product__ratings">
                     <h3>Calificaciones</h3>
