productDetail ejs done

--- a/estructura de archivos/src/views/products/productDetail.ejs
+++ b/estructura de archivos/src/views/products/productDetail.ejs
@@ -42,7 +42,7 @@
                             <button type="submit" name="favorites"><i class="fa-solid fa-heart"></i> Agregar favoritos</button>
                         </div>
                         <div class="edit__product">
-                            <a href="/products/productEdit/"><button type="submit" name="favorites"><i class="fa-solid fa-heart"></i> Editar producto</button></a>
+                            <a href="/products/productEdit/<%= product.id %>"><button type="submit" name="favorites"><i class="fa-solid fa-heart"></i> Editar producto</button></a>
                         </div>
                     </article>
                 </section>
